# object_rearrangement_ros2_sim

./: .gitignore  .polyscope.ini  README.md  docker-compose.yml  jazzy_nv_ubuntu24.dockerfile
hello_moveit/: package.xml
hello_moveit/src/: hello_moveit.cpp
kuka_iisy_description/: package.xml
kuka_iisy_description/launch/: display.launch.py
mpnp_interfaces/: CMakeLists.txt  package.xml
mpnp_interfaces/msg/: Block.msg  Object.msg  Plan.msg  Surface.msg  TaskAction.msg  Vector4.msg
mpnp_interfaces/srv/: ExecutePlan.srv  MoveArm.srv  MoveBase.srv  Pick.srv  Place.srv  PlanConstructionTask.srv  Trigger.srv
mpnp_plugins/src/: contact_plugin.cpp  vacuum_tool_plugin.cpp
mpnp_simulation/: setup.cfg  setup.py
mpnp_simulation/config/: plan.pkl  plan.txt
mpnp_simulation/launch/: iisy_vgc10_display.launch.py  omnirob_iisy_moveit.launch.py  omnirob_iisy_vgc10.launch.py  omnirob_iisy_vgc10_moveit.launch.py
mpnp_simulation/models/: box.sdf  kuka_iisy_vgc10.urdf.xacro  kuka_omnirob_iisy_vgc10.urdf.xacro  voronoi.3dm
mpnp_simulation/mpnp_simulation/: tamp_interface.py  world_manager.py
mpnp_simulation/worlds/: empty.sdf
omnirob_description/: package.xml
omnirob_description/config/: omnirob.ros2_control.xacro  omnirob_ros2_controllers.yaml
omnirob_description/launch/: ros2_gz_control_sim.launch.py
omnirob_description/urdf/: omnirob.urdf.xacro
omnirob_iisy_vgc10_moveit_config/: package.xml
omnirob_iisy_vgc10_moveit_config/config/: kuka_omnirob_iisy_vgc10.srdf  moveit.rviz  ros2_controllers.yaml
omnirob_iisy_vgc10_moveit_config/launch/: move_group.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
onrobot_vg_description/: package.xml
onrobot_vg_description/urdf/: onrobot_vgc10_4cup.urdf.xacro  (+1 more)
path_planner/: package.xml  setup.py
src/mpnp_plugins/: CMakeLists.txt  package.xml
src/mpnp_plugins/hooks/: mpnp_plugins.sh.in
src/mpnp_plugins/include/mpnp_plugins/: contact_plugin.hpp  vacuum_tool_plugin.hpp
src/mpnp_plugins/src/: contact_plugin.cpp  vacuum_tool_plugin.cpp
(+161 files in other folders)
